feat: Implementing candidate list retrieving
