# src/main/java/com/gabrieldears/talent_forge/adapter/web/CandidateController.java
@@ -14,6 +14,7 @@ import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import javax.validation.Valid;
+import javax.validation.constraints.Min;
 import java.net.URI;
 import java.util.List;
 
@@ -27,6 +28,14 @@ public class CandidateController implements com.gabrieldears.talent_forge.api.Ca
     public CandidateController(CandidateService candidateService, BeanInputValidationUtils beanInputValidationUtils) {
         this.candidateService = candidateService;
         this.beanInputValidationUtils = beanInputValidationUtils;
+    }
+
+    @Override
+    public ResponseEntity<com.gabrieldears.talent_forge.model.CandidatesGet200Response> candidatesGet(
+            @Min(0) @Parameter(name = "page", description = "Page number (starts at 0)", in = ParameterIn.QUERY) @Valid @RequestParam(value = "page", required = false, defaultValue = "0") Integer page,
+            @Min(1) @Parameter(name = "size", description = "Number of candidates per page", in = ParameterIn.QUERY) @Valid @RequestParam(value = "size", required = false, defaultValue = "10") Integer size
+    ) {
+        return ResponseEntity.ok(candidateService.findAll(page, size));
     }
 
     @Override
